--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,12 @@
   <body>
     <div class="container text-center mt-5">
       <h1 class="mb-4">Elige alguna carta y se feliz</h1>
+      <br />
       <div id="table" class="mt-5 mx-auto">
         <div id="cardContainer"></div>
       </div>
-      <button id="generateCard" class="btn btn-primary mt-3">
+      <br />
+      <button id="generateCard" class="btn btn-outline-warning mt-3">
         tu suerte
       </button>
     </div>
